# arxiv-sniffer

./: 404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  README-en.md  README-zh.md  README.md  config.toml  index.html  mkdocs.yml
.github/workflows/: auto-deploy.yaml  deploy-pages.yaml
Agentic_ai/2026-03-09/: index.html
Agentic_ai/2026-03-10/: index.html
Agentic_ai/2026-03-11/: index.html
Agentic_ai/2026-03-12/: index.html
Agentic_ai/2026-03-13/: index.html
Agentic_ai/2026-03-16/: index.html
Agentic_ai/2026-03-17/: index.html
Agentic_ai/2026-03-18/: index.html
Agentic_ai/2026-03-19/: index.html
Agentic_ai/2026-03-20/: index.html
Agentic_ai/2026-03-23/: index.html
Agentic_ai/2026-03-24/: index.html
Agentic_ai/2026-03-25/: index.html
Agentic_ai/2026-03-26/: index.html
Agentic_ai/2026-03-27/: index.html
Agentic_ai/2026-03-30/: index.html
Agentic_ai/2026-03-31/: index.html
Agentic_ai/2026-04-01/: index.html
Agentic_ai/2026-04-02/: index.html
Agentic_ai/2026-04-03/: index.html
Agentic_ai/2026-04-06/: index.html
Agentic_ai/2026-04-07/: index.html
Agentic_ai/2026-04-08/: index.html
Agentic_ai/2026-04-09/: index.html
Agentic_ai/2026-04-10/: index.html
RLHFRLVF/2026-03-09/: index.html
RLHFRLVF/2026-03-10/: index.html
mkdocs/: mkdocs.yml  pyproject.toml
prompts/: relevance_dimensions.json  relevance_dimonsions.json  relevance_template.txt
readme/: index.html
search/: search_index.json
src/: arxiv.rs  const.rs  crawler.rs  filter.rs  logger.rs  main.rs  mkdocs.rs
templates/: dimension_template.md  metrics_template.md
(+36 files in other folders)
