[package]
name = "arxiv-sniffer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.4"
urlencoding = "2.1.3"
